replace english json file

--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -12,16 +12,16 @@
     "camp_area": "แคมป์กลางแจ้ง",
     "restaurant": "อาหารรสเด็ด",
     "ecotourism": "ท่องเที่ยวเชิงนิเวศ",
-    "orchard": "農特產品",
-    "special_offer": "相關訊息",
-    "ticket_price": "門票價格",
+    "orchard": "ผลิตภัณฑ์ทางการเกษตร",
+    "special_offer": "ข่าวสารที่เกี่ยวข้อง",
+    "ticket_price": "ราคาบัตรผ่านประตู",
     "transportation": "ข้อมูลการเดินทาง",
-    "tour_guide": "導覽服務",
+    "tour_guide": "บริการนำเที่ยว",
     "itinerary": "แผนท่องเที่ยวแนะนำ",
-    "tea_saloon": "武陵茶莊",
-    "visitor_center": "旅客服務中心",
-    "meeting_room": "會議中心",
-    "coffee_bar": "森林咖啡吧"
+    "tea_saloon": "บ้านชาอู่หลิง",
+    "visitor_center": "ศูนย์บริการนักท่องเที่ยว",
+    "meeting_room": "ศูนย์การประชุม",
+    "coffee_bar": "ร้านกาแฟกลางป่า"
   },
   "long_stay": {
     "slogan": "แผนโปรโมชั่น Long stay",
@@ -218,13 +218,13 @@
     "notice": "ข้อควรระวัง",
     "notice_01": "นักท่องเที่ยวทั่วไปหรือนักท่องเที่ยวค้างแรมเมื่อถึงฟาร์มอู่หลิงแล้วจำเป็นต้องลงรถมาซื้อตั๋วผ่านประตู แล้วจึงขึ้นรถอีกครั้งเพื่อไปยังสถานีจอดรถบัส (ใกล้กับศูนย์บริการนักท่องเที่ยว) หากเป้าหมายปลายทางของคุณคือโรงแรมกั๋วหมินปินก่วน กรุณาแจ้งคนขับรถล่วงหน้าว่าจะลงรถก่อน",
     "notice_02": "ข้อมูลการเดินรถหากมีการเปลี่ยนแปลง ให้ยึดตามประกาศของแต่ละบริษัทเจ้าของรถบัส",
-    "by_van": "搭乘專車",
+    "by_van": "โดยสารโดยรถประจำเส้นทางฟาร์มอู่หลิง",
     "ego_bus": "รสบัสเที่ยวชมรอบเกาะไต้หวัน(ระยะเวลาเดินทางทั้งหมด 4 ชั่วโมง  มีรถออกทุกวัน  ต้องจองรถล่วงหน้าก่อน 72 ชั่วโมง  เบอร์โทรศัพท์ 02-27965696)",
     "ego_taipei_wuling": "สถานีรถไฟไทเป ประตู East 3 -สะพานรับแขก -สถานีอนามัย - หมู่บ้านตากอากาศอู่หลิงฝูเหย่ 07.30 น.",
     "ego_wuling_taipei": "ประตูใหญ่หมู่บ้านตากอากาศอู่หลิงฝูเหย่ - สถานีอนามัย - สะพานรับแขก - สถานีรถไฟไทเป 13.30 น.",    
     "lion_bus": "รสบัส Lion Express (เส้นทางเดินรถประจำทางไทเป- อู่หลิง จองตั๋วล่วงหน้า โทร 02-87939611 )",
-    "lion_taipei_wuling": "台北火車站站前門市集合~武陵農場遊客中心。發車時間 06:40",
-    "lion_wuling_taipei": "武陵農場遊客中心~台北火車站。發車時間 16:30",
+    "lion_taipei_wuling": "รวมตัวกันที่ร้านสาขาหน้าสถานีรถไฟไทเป(Taipei Station) - ศูนย์บริการนักท่องเที่ยวฟาร์มอู่หลิง เวลาออกรถ 06.40 น.",
+    "lion_wuling_taipei": "ศูนย์บริการนักท่องเที่ยวฟาร์มอู่หลิง - สถานีรถไฟไทเป เวลาออกรถ 16.30 น.",
     "lion_website": "เว็บไซต์รถบัส Lion Express"
   },
   "tour_guide": {
@@ -269,39 +269,39 @@
     "trip_ten": "เส้นทางชมนกยาว 0.95 กิโลเมตร เส้นทางไร่ชารอบนอกยาว 1.15 กิโลเมตร (ไปกลับประมาณ 40 นาที) เส้นทางชมนกและผีเสื้อยาว 2.15 กิโลเมตร เส้นทางสวนพฤกษศาสตร์ภูเขาสูงยาว 1.15 กิโลเมตร เส้นทางป่าสนยาว 0.3 กิโลเมตร เส้นทางน้ำตกเถาซานยาว 4.3 กิโลเมตร (ไปกลับประมาณ 3 ชั่วโมง)"
   },
   "tea_saloon": {
-    "name": "武陵茶莊",
+    "name": "บ้านชาอู่หลิง",
     "content": "บ้านชาฟาร์มอู่หลิงจัดจำหน่ายสินค้าใบชาและสินค้าทางการเกษตรเป็นหลัก และจัดจำหน่ายอาหารร้อนบางประเภทด้วย ทางบ้านชามีพื้นที่ชงชาโดยเฉพาะให้นักท่องเที่ยวที่รักการดื่มชา นักท่องเที่ยวสามารถซึมซับรสชาติละมุนลิ้นหอมกรุ่นจากใบชาธรรมชาติที่ธรรมชาติของที่นี้ได้สร้างขึ้นอย่างละเมียดละไมเอาไว้",
     "open": "เวลาทำการ : ทุกวันเวลา 7.30 - 18.30 น.",
     "holiday": "ระหว่างช่วงวันหยุดฤดูหนาว วันหยุดฤดูร้อนและช่วงเทศกาลดอกไม้ เวลาทำการจะปรับเปลี่ยนเป็นทุกวัน 7.00 - 18.30 น."
   },
   "visitor_center": {
-    "name": "旅客服務中心",
+    "name": "บ้านชาอู่หลิง",
     "content": "ศูนย์บริการนักท่องเที่ยวฟาร์มอู่หลิง หน้าที่หลัก คือ จัดจำหน่ายของใช้ประจำวัน (รองเท้าแตะ ยาสีฟัน ฯลฯ) และอาหารทั่วไป (แครกเกอร์ เครื่องดื่ม ผลิตภัณฑ์ทางการเกษตร ฯลฯ) ",
     "product": "ในวันหยุดทางศูนย์จะขายอาหารร้อนเพิ่มเติมด้วย อาทิเช่น เส้นหมี่น้ำ แกงลูกชิ้น โอเด้ง บะจ่าง ฯลฯ",
     "open": "เวลาทำการ : ทุกวันเวลา 7.00 - 19.00 น."
   },
   "meeting_room": {
-    "conter_method": "1.武陵農場會議室（簡報室）借用方式。",
-    "center_line": "租用登記專線: 04-25901258 #1111 (每天08:00~17:00)",
-    "center_first": "一、適用範圍：",
-    "center_provided": "提供為各項學術研討會、行政會議等之召開場所。",
-    "center_second": "二、使用時間：",
-    "center_divided": "每日分為08:00~11:00；14:00~17:00；18:00~21:00等3個時段。",
-    "center_third": "三、借用方式：",
-    "center_field": "請先以公文函知本場，並將借用單位名稱、借用日期及時間、會議性質、參加人數等註明。(最多容納80人)",
-    "center_fourth": "四、借用規定：",
-    "center_one": "會議室(簡報室)內所有設施(包含桌、椅)維持既有狀況，不得破壞及移動。",
-    "center_two": "室內不得舉行康樂、遊藝及聚餐等活動。",
-    "center_three": "為避免影響本場辦公秩序，借用時間不得高聲喧嘩，並出入簡報室時保持安靜。",
-    "center_four": "會議室(簡報室)提供會議召開外，並提供男、女化妝室以供使用。",
-    "center_fifth": "五、收費規定：",
-    "center_period": "每一時段收費1500元，以供作茶水、衛生清潔、照明設備，保養與維護。(請自備環保杯與原子筆)",
-    "center_copy": "COPY$20元、FAX$10元"
+    "conter_method": "ขั้นตอนยืมใช้ห้องประชุมฟาร์มอู่หลิง (ห้องรายงาน)",
+    "center_line": "เบอร์โทรศัพท์สำหรับลงทะเบียนยืมห้อง:04-25901258#1111 (ทุกวันเวลา 08.00-17.00 น.) ",
+    "center_first": "1.ขอบเขตการใช้",
+    "center_provided": "เป็นสถานที่ประชุมวิชาการ ประชุมงานทุกรูปแบบ",
+    "center_second": "2. เวลาการใช้งาน",
+    "center_divided": "แต่ละวันแบ่งเป็น3ช่วงเวลา ได้แก่ 8.00-11.00 น. ;14.00-17.00 น. ;18.00-21.00 น.",
+    "center_third": "3. ขั้นตอนการยืมห้องประชุม",
+    "center_field": "กรุณาทำหนังสือแจ้งมาทางฟาร์ม พร้อมแจ้งรายละเอียดต่างๆ เช่น ชื่อหน่วยงาน วันเวลาที่จะยืม ลักษณะงานประชุม จำนวนผู้เข้าร่วมประชุม ฯลฯให้ทางฟาร์มทราบ",
+    "center_fourth": "4. ระเบียบการยืมใช้ห้องประชุม",
+    "center_one": "อุปกรณ์ในห้องประชุม(ห้องรายงาน)ทั้งหมดต้องคงสภาพเดิม ห้ามทำลายหรือเคลื่อนเก็บไว้ที่อื่น",
+    "center_two": "ห้ามจัดงานสังสรรค์ กิจกรรมสันทนาการหรือกิจกรรมทานอาหารฯลฯในห้องประชุม",
+    "center_three": "ระหว่างที่ยืมใช้ห้องกรุณาอย่าส่งเสียงดัง และเข้าออกห้องประชุมอย่างเงียบสงบ เพื่อที่จะไม่รบกวนระเบียบการทำงานของทางฟาร์ม",
+    "center_four": "ห้องประชุม(ห้องรายงาน)นอกจากจะให้พื้นที่เปิดการประชุมแล้ว ยังให้บริการห้องน้ำชายหญิงอีกด้วย",
+    "center_fifth": "5. ระเบียบค่าใช้จ่าย",
+    "center_period": "ทางฟาร์มจะเก็บค่าบริการช่วงเวลาละ 1500 หยวน ค่าบริการนี้รวมน้ำต้มชา อุปกรณ์รักษาความสะอาด อุปกรณ์ส่องแสงสว่าง อุปกรณ์รักษาบำรุง (กรุณาเตรียมแก้วกระติกน้ำและปากกาลูกลื่นมาเอง) ",
+    "center_copy": "ถ่ายเอกสาร 20 NT โทรสาร 10 NT"
   },
   "coffee_bar" :{
-    "name":"森林咖啡吧",
-    "content":"โอกาสอันดีที่จะซึมซับอากาศบริสุทธิ์ พร้อมดื่มชานมลาเวนเดอร์สูตรเฉพาะของฟาร์มอู่หลิงไปกับต้นสนญี่ปุ่นที่ยืนต้นอยู่ข้างร้านมานาน 30 ปี", 
-    "product":"現場提供有蛋餅、蔥抓餅、雞絲麵、意麵、披薩(5吋)、麥克雞塊、厚片、肉包、肉粽等；熱飲有奶茶、咖啡、可可、薑母茶、花茶等。",   
+    "name":"ร้านกาแฟกลางป่า",
+    "content":"โอกาสอันดีที่จะซึมซับอากาศบริสุทธิ์ พร้อมดื่มชานมลาเวนเดอร์สูตรเฉพาะของฟาร์มอู่หลิงไปกับต้นสนญี่ปุ่นที่ยืนต้นอยู่ข้างร้านมานาน 30 ปี ทางร้านจัดจำหน่ายโรตีไข่ โรตีต้นหอม เส้นหมี่น้ำ ก๋วยเตี๋ยวอี้เมี้ยน พิซซ่า (5 นิ้ว) นักเก็ต ขนมปังแผ่นหนา ซาลาเปาไส้หมู บะจ่างไส้เนื้อ ฯลฯ เครื่องดื่มร้อนมีชานม กาแฟ โกโก้ ชาขิงแก่ ชาดอกไม้ และอื่นๆ", 
+    "product":"",   
     "tel":"เบอร์โทรศัพท์ร้าน : 04-25901469"    
   }
 }
