replace english json file once

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,15 +24,15 @@
     "coffee_bar": "Forest coffee bar"
   },
   "long_stay": {
-    "slogan": "Long-stay優惠方案",
-    "contain1": "Long-stay旅居，接觸自身想體驗的休閒生活，從事想長期嚮往的生活、做自己想做的事、認識外地文化，武陵農場替您想到了，即將推出此優惠方案。",
-    "contain2": "大家可以好好規畫行程啦~~~超優惠的!!!",
-    "more_information": "更多訊息..."
+    "slogan": "Leisure Agriculture: the  Hardy Garden Mum Experience -- mini tour",
+    "contain1": "We offer the “Leisure Agriculture: The Hardy Garden Mum Experience” mini tour so that our guests may have a unique farm experience. Farm buses will take our tour guests to see the sights and listen to the explanations in the Farm. Our guests may also experience the fun of picking hardy garden mums.",
+    "contain2": "",
+    "more_information": ""
   },
   "peach": {
-    "slogan": "2018年水蜜桃上市",
-    "contain": "現在正是水蜜桃採收的季節。在天然環境的栽培下，讓您買的放心，吃的安心。農場邀請您一起共享人間美味極品和欣賞武陵好風景。",
-    "price": "最新價格..."
+    "slogan": "Taoshan Trail Eco Guided Tour plan — Have fun exploring in our eco tours",
+    "contain": "The trail, flanked by trees, is ecologically rich. As you enjoy the view of the waterfall, you can also immerse yourself in the view of Taoshan and Xueshan mountain peaks. From August 4, the Farm began offering this Taoshan waterfall tour for you to immerse yourself in the phytoncide in the air and the anions from the fall, reaching the most perfect state in the body, the mind, and the spirit.",
+    "price": ""
   },
   "weather": {
     "date": "Data date",
