changed ann pic

--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -24,15 +24,15 @@
     "coffee_bar": "森林咖啡吧"
   },
   "long_stay": {
-    "slogan": "Long-stay優惠方案",
-    "contain1": "Long-stay旅居，接觸自身想體驗的休閒生活，從事想長期嚮往的生活、做自己想做的事、認識外地文化，武陵農場替您想到了，即將推出此優惠方案。",
-    "contain2": "大家可以好好規畫行程啦~~~超優惠的!!!",
+    "slogan": "「休閒農業、杭菊體驗」-微旅行行程專案",
+    "contain1": "為讓遊客來農場有著不同的體驗，特推出「杭菊體驗」-微旅行行程，特別出動農場遊巴，將採杭菊體驗納入行程當中。",
+    "contain2": "讓各位遊客除了搭乘遊巴，可以欣賞沿途農場風光及解說，更可以體驗採杭菊樂趣喔!",
     "more_information": "更多訊息..."
   },
   "peach": {
-    "slogan": "2018年水蜜桃上市",
-    "contain": "現在正是水蜜桃採收的季節。在天然環境的栽培下，讓您買的放心，吃的安心。農場邀請您一起共享人間美味極品和欣賞武陵好風景。",
-    "price": "最新價格..."
+    "slogan": "「桃山步道生態導覽計畫」-生態旅遊探索趣",
+    "contain": "沿途林蔭夾道、生態豐富，欣賞瀑布的同時，還可俯瞰桃山、雪山群峰，令人心曠神怡。農場自8月4日起安排桃山瀑布導覽行程，讓您沉浸大自然芬多精、吸收瀑布天然負離子，身心靈達到最完美境界。",
+    "price": ""
   },
   "weather": {
     "date": "資料日期",
@@ -163,12 +163,12 @@
   },
   "agricultural": {
     "products": "農特產品",
-    "wuling_tea": "武陵茶",
-    "tea_introduction": "由於武陵農場與國家雪霸國家公園共生共存，生態保護區應優先於公有土地內設置，因此武陵農場亦須遵守野生動物保護法及國家公園法，自民國92年已漸漸轉型為有機農業之生產。歷年茶葉農藥殘留檢驗數值皆遠低於國家規定容許量，100、101年度茶葉農藥殘留量檢驗結果更達到「未檢出」水準，證明武陵長紅茶除以特有風味著稱外，實屬兼具「安全健康」之珍稀高山紅茶。",
-    "fruit": "水蜜桃、水梨和蘋果",
-    "fruit_introduction": "我們有高山溫帶地區的果實，在夏季/秋季（7月到10月是果實季節）成熟。水蜜桃和蘋果是外國賓客的最佳禮物。 通過政府機構檢驗，100%不含農藥並獲得認證標章 。",
-    "souvenirs": "特色紀念商品",
-    "souvenirs_introduction": "賣場出售帽子、衣服、裝飾品等等。這些商品都有武陵標記，非常實用而且具有紀念價值 。"
+    "wuling_tea": "茶",
+    "tea_introduction": "位於海拔 2,200 公尺武陵谷地的茶園，因日夜溫差大，終年雲霧繚繞，以純淨無汙染的雪山溪及七家灣溪水灌溉，生產的青心烏龍與金萱的武陵長青茶、武陵長紅茶，葉片厚潤，氣味芳香且耐沖泡，是臺灣高山茶中的極品。",
+    "fruit": "水果",
+    "fruit_introduction": "以春天三月盛開的桃花及蘋果花為最主要果品產出，大約暑假7-8月盛產，是農場夏季盛產水蜜桃及蘋果之旺季。",
+    "souvenirs": "杭菊",
+    "souvenirs_introduction": "栽種於海拔約2,000公尺無汙染的高山，引雪山溪水灌溉，採自然農法栽培。每年9月採收，是全台獨一無二的高山杭菊。"
   },
   "ticket": {
     "ticket_price": "武陵農場入門票收費表",
