--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -86,7 +86,7 @@
     "six_mattresses":"6個單人床墊"
   },
   "campsite": {
-    "about": "武陵農場露營區位在高山植物園區，園區內設有生態水池、水中植物池、中藥園區、草園區、花海區等，群山環繞，由雪山管制站至七卡山莊，可清楚地望見無名峰、中央尖山、南湖大山群峰、羅葉尾峰、桃山；山嵐水色，自然天成，是國內難得的天然避暑樂園。",
+    "about": "露營區為住客提供多樣選擇性，除了基本汽車棧板搭設帳棚體驗露營樂趣之外，更提供空中帳篷、小木屋及可愛露營屋、景觀屋等多樣選擇。 露營區位於高山植物園區，擁有多樣的生態資源，與大自然為伍的森林渡假無非是一種享受。 營區更提供方便的使用機能性，如電座、插頭、淋浴設備等，更可野炊等體驗活動。露營區森林咖啡吧亦提供早餐、飲料等餐點，飲食用餐又更多樣性。",
     "camp_pallet": "露營營位",
     "price": "定價",
     "remark": "備註",
@@ -137,13 +137,13 @@
     "breakfast_item": "包含粥品、咖啡、豆漿、武陵茶、饅頭、現烤吐司、當季蔬菜等。",
     "location_hotel": "用餐地點:國民賓館。",
     "family_style": "團體合菜",
-    "family_seven": "七菜一湯合菜(十人份) NT$3000/桌(限午餐)。",
-    "family_eight": "八菜一湯合菜(十人份) NT$3500/桌。",
-    "family_item": "菜色(依季節變化)",
+    "family_seven": "七菜一湯合菜(十人份) NT$3000/桌(限午餐)。 菜色(依季節變化)：茶香元蹄．香酥野溪蝦．醬燒桂竹筍．武陵酸白菜．清蒸香草鱸魚．海鮮和風時蔬．高山高麗菜．美味燉湯．寶島水果．白飯",
+    "family_eight": "八菜一湯合菜(十人份) NT$3500/桌起。菜色(依季節變化)：蔥油雞．紫蘇梅排骨．番茄牛腩．鹽焗草蝦．XO杏鮑菇．武陵酸白菜．檸檬海上鮮．枸杞高麗菜．美味燉湯．寶島水果．白飯。",
+    "family_item": "P.S:本菜單僅供參考，菜單依時令調整部分菜色。",
     "lunch_set": "中午半自助式套餐",
-    "private_set": "半自助式套餐 NT$300/人，小朋友170元(身高115cm~150cm),國中生以上 NT$ 300/人，亦有供應素食。",
+    "private_set": "NT$300/人，小朋友170元(身高115cm~150cm),國中生以上 NT$ 300/人，亦有供應素食。",
     "dinner_buffet": "自助式晚餐",
-    "buffet_price": "自助餐 NT$350/人，小朋友200元(身高115cm~150cm)，國中生以上 NT$ 350/人。"
+    "buffet_price": "17:30~20:00(如住客眾多時，晚餐將分二個時段17:30~18:50；19:00~20:20，由櫃台統籌分配)  中西式自助餐每人 NT$350、小朋友NT$200元/人(身高115cm~150cm)，國中以上NT$350/人"
   },
   "ecotourism": {
     "ecology": "生態介紹",
@@ -202,7 +202,7 @@
     "taichung_path": "國道六號（或中投快速道路）→埔里→霧社→合歡山→梨山→武陵(行車時間約5小時)",
     "hualien": "花蓮",
     "hualien_path": "太魯閣→大禹嶺→梨山→武陵(行車時間約4.5時)",
-    "by_bus": "搭乘客運",
+    "by_bus": "搭乘大眾交通運輸工具至武陵農場",
     "kuo-kuang": "國光客運(全程2小時40分鐘)",
     "yilan_wuling": "【1751】宜蘭~武陵  發車時間 07:30、12:40 ",
     "wuling_yilan": "【1751】武陵~宜蘭   發車時間  09:10、14:10 ",
@@ -228,7 +228,7 @@
     "lion_website": "雄獅通運巴士網站"
   },
   "tour_guide": {
-    "north_bus": "北谷區深度導覽遊園巴士",
+    "north_bus": "北谷區深度導覽遊園巴士(自費行程)",
     "north_price": "北谷遊園巴士生態導覽 150元/人，小朋友學齡前佔位100元，不佔位免費",
     "north_weekdays": "平日:星期一至星期五",
     "north_morniing": "上午 9:00~11:00",
@@ -271,7 +271,7 @@
   "tea_saloon": {
     "name": "武陵農場茶莊",
     "content": "武陵農場茶莊主要販賣以茶葉及農特產品為主，並有一些熱食提供。且提供喜愛泡茶喝的遊客，有一專屬泡茶空間，享受這自然環境孕育出來天然茶葉帶來的香韻潤喉滋味。",
-    "open": "營業時間: 每日 07:30~18:00；寒、暑假及櫻花季期間每日07:00~18:30",
+    "open": "營業時間: 每日 07:30~18:00",
     "holiday":"寒、暑假及櫻花季期間每日07:00~18:30"    
   },
   "visitor_center": {
