adject text shadow

--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -24,15 +24,15 @@
     "coffee_bar": "ร้านกาแฟกลางป่า"
   },
   "long_stay": {
-    "slogan": "แผนโปรโมชั่น Long stay",
-    "contain1": "พักท่องเที่ยวแบบ Long-stay สัมผัสกับชีวิตชิลล์ๆ แบบที่ตัวเองต้องการ หากคุณต้องการใช้ชีวิตอย่างที่คุณต้องการนานๆ ทำเรื่องที่คุณอยากทำ เรียนรู้วัฒนธรรมต่างถิ่น ฟาร์มอู่หลิงได้คิดเตรียมพร้อมไว้ให้คุณแล้ว จึงได้เสนอแผนโปรโมชั่นนี้ขึ้น",
-    "contain2": "ทุกคนสามารถวางแผนตารางเที่ยวได้เลย คุ้มสุดๆ",
-    "more_information": "รายละเอียดเพิ่มเติม"
+    "slogan": "'การเกษตรเชิงนันทนาการ สัมผัสดอกเก๊กฮวย' แผนเที่ยวแบบสบายๆ",
+    "contain1": "เพื่อให้นักท่องเที่ยวได้สัมผัสประสบการณ์ที่แตกต่างเมื่อมาถึงฟาร์ม ทางเราได้เสนอ แผนการท่องเที่ยวสบายๆ 'สัมผัสเก๊กฮวย'เป็นพิเศษขึ้นมา ทางเราได้ออกรถบัสวิ่งรอบฟาร์มและเพิ่มกิจกรรมเก็บดอกเก๊กฮวยเป็นส่วนหนึ่งของรายการท่องเที่ยว เพื่อที่จะให้นักท่องเที่ยวนอกจากจะสามารถนั่งรถชมฟาร์มแล้ว ยังสามารถชมทัศนียภาพและคำอธิบายตลอดทางได้อีกด้วย ยิ่งทำให้ทุกท่านสัมผัสได้ถึงความสุขจากการเก็บดอกเก๊กฮวยมากยิ่งขึ้น",
+    "contain2": "",
+    "more_information": ""
   },
   "peach": {
-    "slogan": "2018年水蜜桃上市",
-    "contain": "現在正是水蜜桃採收的季節。在天然環境的栽培下，讓您買的放心，吃的安心。農場邀請您一起共享人間美味極品和欣賞武陵好風景。",
-    "price": "最新價格..."
+    "slogan": "'แผนเที่ยวชมระบบนิเวศทางเดินภูเขาเถาซาน' ความสนุกจากการสำรวจธรรมชาติ",
+    "contain": "ในเวลาที่ท่านเดินตามทางแคบๆ ใต้ร่มไม้ ชมระบบนิเวศที่อุดมสมบูรณ์ ชมน้ำตกอยู่นั้น ท่านก็สามารถชมภูเขาเถาซาน กลุ่มยอดเขาเซวี่ยซานได้ ชวนให้จิตใจสบายปลอดโปร่ง ทางเราได้จัดแผนเที่ยวชมน้ำตกเถาซานตั้งแต่วันที่ 4 สิงหาคม ให้ทุกท่านสัมผัสถึงความสวยงามวิจิตรของธรรมชาติ สูดรับไอออนลบธรรมชาติจากน้ำตก และให้ร่างกายและจิตใจของท่านได้สัมผัสถึงความสมบูรณ์แบบที่สุด",
+    "price": ""
   },
   "weather": {
     "date": "ข้อมูล ณ วันที่",
