--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -27,7 +27,7 @@
     "slogan": "「休閒農業、杭菊體驗」-微旅行行程專案",
     "contain1": "為讓遊客來農場有著不同的體驗，特推出「杭菊體驗」-微旅行行程，特別出動農場遊巴，將採杭菊體驗納入行程當中。",
     "contain2": "讓各位遊客除了搭乘遊巴，可以欣賞沿途農場風光及解說，更可以體驗採杭菊樂趣喔!",
-    "more_information": "更多訊息..."
+    "more_information": ""
   },
   "peach": {
     "slogan": "「桃山步道生態導覽計畫」-生態旅遊探索趣",
