--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -53,7 +53,7 @@
     "introduction": "본 농장은 우링(武陵) 국민빈관, 레저 농장(農莊) 및 산수관(山水館)등 다양한 숙박 및 룸형을 제공하므로 여객의 취향에 따라 선택할 수 있습니다. 2인실, 3인실, 4인실, 6인실 및 무장애 객실등이 있습니다. 가격은 $3420에서 $7500까지 각 다릅니다.",
     "wuling_hotel": "국민빈관",
     "shanshui_villa": "산수관",
-    "leisure_farm_villa": "레저농장(農莊)",
+    "leisure_farm_villa": "레저농장",
     "price": "가격",
     "general_people": "일반 여객",
     "special": "군공교",
