--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -50,6 +50,7 @@
         "notice_sorce": "警察放送局"
     },
     "wuling-hotel": {
+        "order":"オンライン予約",
         "introduction": "本農場は国民賓館や休閒農荘、山水館など様々な宿泊施設やお部屋タイプをお選びになれます。お部屋は2~4名様部屋、6名様部屋、バリアフリールームをご用意しております。宿泊料金はNT$3,420~$7,500までお部屋タイプによって異なります。",
         "wuling_hotel": "国民賓館",
         "shanshui_villa": "山水館",
@@ -86,6 +87,7 @@
         "six_mattresses": "1名様用マットレス×6"
     },
     "campsite": {
+        "order":"オンライン予約",
         "about": "キャンプ場では、テントと自動車用パレット設置でキャンプの基本的な楽しさを体験できる他に、空中テント、ロッジ、かわいいバンガロー、パノラマロッジなど、色々お選びになれます。キャンプエリアには多様な生態資源を要する高山植物園もあり、自然に溶け込んだ森林リゾートで他では味わえない体験ができます。コンセントやプラグ、入浴設備など機能性に優れた器具を揃っている他、自炊なども行うことができます。キャンプ内の新フィンカフェではご朝食、ドリンクなどのメニューを提供していますので、多彩なお食事をお楽しみになれます。",
         "camp_pallet": "キャンプ位置",
         "price": "定価",
