--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -50,6 +50,7 @@
     "notice_sorce": "경찰 라디오 방송"
   },
   "wuling-hotel": {
+    "order":"온라인 예약",
     "introduction": "본 농장은 우링(武陵) 국민빈관, 레저 농장(農莊) 및 산수관(山水館)등 다양한 숙박 및 룸형을 제공하므로 여객의 취향에 따라 선택할 수 있습니다. 2인실, 3인실, 4인실, 6인실 및 무장애 객실등이 있습니다. 가격은 $3420에서 $7500까지 각 다릅니다.",
     "wuling_hotel": "국민빈관",
     "shanshui_villa": "산수관",
@@ -86,6 +87,7 @@
     "six_mattresses": "6 x 1인용 침대"
   },
   "campsite": {
+    "order":"온라인 예약",
     "about": "켐핑구역은 입주 고객에게 제공하는 한가지 옵션입니다. 기본 자동차 운반대에 텐트를 설치하여 체험할 수 있으며, 공중 텐트, 통나무 하우스 및 귀여운 켐핑 하우스, 경관옥등 다양한 선택도 할 수 있습니다. 켐핑구역은 고산 식물원 구역에 위치하며, 다양한 생태자원이 풍부하여, 대자연과 함께 숲속에서 즐기는 느낌도 행복합니다. 켐핑구역에는 전원 코드, 소켓, 샤워시설등 편리한 장비를 제공하며, 야외 요리 체험도 할 수 있습니다. 켐핑구역 숲속 커피바에는 아침식사, 음료수등을 제공하여, 더 색다른 식사를 할 수 있습니다.",
     "camp_pallet": "켐핑 위치",
     "price": "가격",
