--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -50,6 +50,7 @@
     "notice_sorce": "สถานีวิทยุกระจายเสียงตำรวจ"
   },
   "wuling-hotel": {
+    "order":"จองห้องพักออนไลน์",
     "introduction": "ทางฟาร์มมีตัวเลือกที่พักและรูปแบบห้องให้เลือกมากมายไม่ว่าจะเป็นกั๋วหมินปินก่วน บ้านเกษตรสุขใจและบ้านซานซุ่ย ทางเรามีทั้งห้อง 2 คน ห้อง 3 คน ห้อง 4 คน ห้อง 6 คนและห้องพักสำหรับคนพิการ ราคาห้องพักตกห้องละ 3,420 NT ถึง 7,500 NT ขึ้นอยู่กับรูปแบบห้อง",
     "wuling_hotel": "กั๋วหมินปินก่วน",
     "shanshui_villa": "บ้านซานซุ่ย",
@@ -86,6 +87,7 @@
     "six_mattresses": "ฟูกนอนเตียงเดี่ยว 6 ชิ้น"
   },
   "campsite": {
+    "order":"จองห้องพักออนไลน์",
     "about": "เขตแคมป์กลางแจ้งเป็นสถานที่พักแรมที่มีตัวเลือกมากมาย นอกจากแท่นจอดรถ เต้นท์ปักสมอที่ชวนให้ทุกคนสามารถสัมผัสกับความสนุกของแคมป์กลางแจ้งแล้ว ทางเรายังมีเต้นท์ลอยกลางอากาศ บ้านไม้น้อย บังกะโลน่ารักๆ และบ้านชมวิวให้เลือกอีกด้วย บังกะโลตั้งอยู่ในเขตสวนพฤกษศาสตร์ภูเขาสูง มีทรัพยากรพรรณพืชมากมาย สามารถซึบซัมบรรยากาศเป็นหนึ่งเดียวกับธรรมชาติที่โดดเด่นไม่เหมือนใคร ในเขคแคมป์กลางแจ้งมีอุปกรณ์อำนวยความสะดวกให้บริการ เช่น ปลั๊กไฟ หัวปลั๊ก อุปกรณ์อาบน้ำ ฯลฯ นอกจากนี้ยังมีกิจกรรมให้นักท่องเที่ยวสามารถสัมผัสถึงการทำอาหารกลางแจ้งอีกด้วย ร้านกาแฟป่าไม้ในเขตแคมป์กลางมีอาหารเช้า เครื่องดื่ม ฯลฯ จำหน่าย เป็นอีกตัวเลือกหนึ่งที่นักท่องเที่ยวสามารถเลือกได้",
     "camp_pallet": "ตำแหน่งตั้งแคมป์",
     "price": "ราคา",
