--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -50,6 +50,7 @@
     "notice_sorce": "警察廣播電台"
   },
   "wuling-hotel": {
+    "order":"線上訂房",
     "introduction": "本場提供武陵國民賓館、休閒農莊及山水館等多樣化的住宿及房型選擇。提供兩人房、三人房、四人房、六人房及無障礙房間，價格則從每間客房$3420至$7500 元不等。",
     "wuling_hotel": "國民賓館",
     "shanshui_villa": "山水館",
@@ -86,6 +87,7 @@
     "six_mattresses":"6個單人床墊"
   },
   "campsite": {
+    "order":"線上訂營位",
     "about": "露營區為住客提供多樣選擇性，除了基本汽車棧板搭設帳棚體驗露營樂趣之外，更提供空中帳篷、小木屋及可愛露營屋、景觀屋等多樣選擇。 露營區位於高山植物園區，擁有多樣的生態資源，與大自然為伍的森林渡假無非是一種享受。 營區更提供方便的使用機能性，如電座、插頭、淋浴設備等，更可野炊等體驗活動。露營區森林咖啡吧亦提供早餐、飲料等餐點，飲食用餐又更多樣性。",
     "camp_pallet": "露營營位",
     "price": "定價",
