repare the menu no action on ie 11

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -213,8 +213,8 @@
     "kao_kuang_roadmap": "Kuo-Kuang Motor Transport Company bus route",
     "kao_kuang_fee": "Kuo-Kuang Motor Transport Company ticket price table",
     "fengyuan_bus": "Fengyuan Bus Transportation (trip duration 6 hours)",
-    "fengyuan_wuling": "【6506】Fengyuan → Lishan 09:10; Lishan → Wuling 17:00",
-    "wuling_fengyuan": "【6508】Wuling → Lishan 06:30; Lishan → Fengyuan 08:30",
+    "fengyuan_wuling": "【865】Guguan → Lishan 06:45,11:45,16:15; Lishan → Wuling 09:30,13:20",
+    "wuling_fengyuan": "【866】Wuling → Lishan 11:00,14:20; Lishan → Guguan 06:10,11:10,15:40",
     "fengyuan_website": "Fengyuan Bus Transportation website",
     "advice": "If you are coming from central or southern Taiwan, you may wish to depart from Taipei, where more departures are available.",
     "notice": "Attention",
