--- a/src/assets/i18n/in.json
+++ b/src/assets/i18n/in.json
@@ -213,8 +213,8 @@
     "kao_kuang_roadmap": "Peta Jalan Bus Kuokuang",
     "kao_kuang_fee": "Tabel Harga Tiket Bus Kuokuang",
     "fengyuan_bus": "Bus Fengyuan (seluruh perjalanan 6 jam)",
-    "fengyuan_wuling": "【6506】Fengyuan ~ Lishan 09:10  Lishan ~ Wuling 17:00",
-    "wuling_fengyuan": "【6508】Wuling ~ Lishan 06:30  Lishan ~ Fengyuan 08:00",
+    "fengyuan_wuling": "【865】Guguan ~ Lishan 06:45,11:45,16:15  Lishan ~ Wuling 09:30,13:20",
+    "wuling_fengyuan": "【866】Wuling ~ Lishan 11:00,14:20 Lishan ~ Guguan 06:10,11:10,15:40",
     "fengyuan_website": "Situs Bus Fengyuan Taichung",
     "advice": "Teman di bagian tengah dan selatan disarankan berangkat dari Taipei, trip bus lebih banyak.",
     "notice": "Perhatian",
