--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -213,8 +213,8 @@
         "kao_kuang_roadmap": "国光バス路線図",
         "kao_kuang_fee": "国光バス運賃表",
         "fengyuan_bus": "豊原バス（豐原客運）(所要時間6時間)",
-        "fengyuan_wuling": "【6506】時刻（豊原~梨山） 09:10 時刻（梨山~武陵） 17:00",
-        "wuling_fengyuan": "【6508】時刻（武陵~梨山） 06:30 時刻（梨山~豊原） 08:00",
+        "fengyuan_wuling": "【865】時刻（谷關~梨山） 06:45,11:45,16:15 時刻（梨山~武陵） 09:30,13:20",
+        "wuling_fengyuan": "【866】時刻（武陵~梨山） 11:00,14:20 時刻（梨山~谷關） 06:10,11:10,15:40",
         "fengyuan_website": "台中豊原バスホームページ",
         "advice": "中南部からお越しの方は便数が多いですので台北からのご乗車をお勧めします。",
         "notice": "ご注意",
