--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -213,8 +213,8 @@
     "kao_kuang_roadmap": "국광(國光)버스 노선도",
     "kao_kuang_fee": "국광(國光)버스 가격표",
     "fengyuan_bus": "펑웬(豐原)버스 (주행시간: 6시간)",
-    "fengyuan_wuling": "【6506】펑웬(豐原)~리산(梨山) 09:10  리산(梨山)~우링(武陵) 17:00",
-    "wuling_fengyuan": "【6508】우링(武陵)~리산(梨山) 06:30 리산(梨山)~펑웬(豐原) 08:00",
+    "fengyuan_wuling": "【865】곡관 (谷關)~리산(梨山) 06:45,11:45,16:15  리산(梨山)~우링(武陵) 09:30,13:20",
+    "wuling_fengyuan": "【866】우링(武陵)~리산(梨山) 11:00,14:20 리산(梨山)~곡관 (谷關) 06:10,11:10,15:40",
     "fengyuan_website": "타이중 펑웬(豐原)버스 웹사이트",
     "advice": "중남부 여객은 타이베이에서 출발하십시오, 발차 횟수가 더 많습니다.",
     "notice": "주의사항",
