--- a/src/assets/i18n/ms.json
+++ b/src/assets/i18n/ms.json
@@ -213,8 +213,8 @@
     "kao_kuang_roadmap": "Laluan bas Syarikat Pengangkutan Motor Kuo-Kuang",
     "kao_kuang_fee": "Jadual harga tiket Syarikat Pengangkutan Motor Kuo-Kuang",
     "fengyuan_bus": "Pengangkutan Bas Fengyuan (tempoh perjalanan 6 jam)",
-    "fengyuan_wuling": "【6506】Fengyuan → Lishan 09:10 Lishan → Wuling 17:00",
-    "wuling_fengyuan": "【6508】Wuling → Lishan 06:30 Lishan → Fengyuan 08:30",
+    "fengyuan_wuling": "【865】Guguan → Lishan 06:45,11:45,16:15 Lishan → Wuling 09:30,13:20",
+    "wuling_fengyuan": "【866】Wuling → Lishan 11:00,14:20 Lishan → Guguan 06:10,11:10,15:40",
     "fengyuan_website": "Laman web Pengangkutan Bas Fengyuan",
     "advice": "Jika anda datang dari bahagian tengah atau selatan Taiwan, anda mungkin ingin bertolak dari Taipei, di mana lebih banyak waktu berlepas disediakan.",
     "notice": "Perhatian",
