--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -213,8 +213,8 @@
     "kao_kuang_roadmap": "แผนที่เดินรถของรสบัสกั๋วกวง",
     "kao_kuang_fee": "ตารางราคาค่าตั๋วของรสบัสกั๋วกวง",
     "fengyuan_bus": "รสบัสเฟิงหยวน (เวลาเดินทางทั้งหมด 6 ชั่วโมง)",
-    "fengyuan_wuling": "【6506】เฟิงหยวน ไป ภูเขาหลีซาน 09:10 น. หลีซาน ไป อู่หลิง 17:00 น.",
-    "wuling_fengyuan": "【6508】อู่หลิง ไป ภูเขาหลีซาน 06:30 น. ภูเขาหลีซาน ไป เฟิงหยวน 08:00 น.",
+    "fengyuan_wuling": "【865】ฤดูใบไม้ผลิในไต้หวัน ไป ภูเขาหลีซาน 06:45,11:45,16:15 น. หลีซาน ไป อู่หลิง 09:30,13:20 น.",
+    "wuling_fengyuan": "【866】อู่หลิง ไป ภูเขาหลีซาน 11:00,14:20 น. ภูเขาหลีซาน ไป ฤดูใบไม้ผลิในไต้หวัน 06:10,11:10,15:40 น.",
     "fengyuan_website": "เว็บไซต์รสบัสไถจงเฟิงหยวน",
     "advice": "เพื่อนๆ ที่อยู่ภาคกลางและภาคใต้แนะนำว่าให้ออกเดินทางจากเมืองไทเป  มีเที่ยวรถค่อนข้างมาก",
     "notice": "ข้อควรระวัง",
