--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -213,8 +213,8 @@
         "kao_kuang_roadmap": "Bản đồ tuyến xe khách Quốc Quang (Guoguang)",
         "kao_kuang_fee": "Bảng giá xe khách Quốc Quang (Guoguang)",
         "fengyuan_bus": "Xe khách Phong Nguyên (Fengyuan) (lộ trình 6 tiếng đồng hồ)",
-        "fengyuan_wuling": "【6506】Phong Nguyên (Fengyuan) ~ Lê Sơn (Lishan): 09:10; Lê Sơn (Lishan) ~ Phong Nguyên (Fengyuan): 17:00",
-        "wuling_fengyuan": "【6508】Vũ Lăng (Wuling) ~ Lê Sơn (Lishan): 06:30; Lê Sơn (Lishan) ~ Vũ Lăng (Wuling): 08:00",
+        "fengyuan_wuling": "【6506】Gǔguān (Guguan) ~ Lê Sơn (Lishan):  06:45,11:45,16:15; Lê Sơn (Lishan) ~ Gǔguān (Guguan): 06:10,11:10,15:40",
+        "wuling_fengyuan": "【6508】Vũ Lăng (Wuling) ~ Lê Sơn (Lishan): 11:00,14:20; Lê Sơn (Lishan) ~ Vũ Lăng (Wuling): 09:30,13:20",
         "fengyuan_website": "Trang web Công ty xe khách Phong Nguyên Đài Trung (Fengyuan Taizhong)",
         "advice": "Các bạn ở khu vực miền Nam và miền Trung nên xuất phát từ Đài Bắc, lượt xe sẽ nhiều hơn.",
         "notice": "Những điều cần chú ý",
