--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -94,21 +94,21 @@
     "remark": "備註",
     "a1_car_pallet": "A區、A1區汽車棧板",
     "a1_car_pallet_type": "須自搭營帳，木棧板營位 。(A1區為300cm*300cm，A區為320cm*300cm)。",
-    "a1_car_pallet_remark": "電源插座乙座、專屬餐桌、使用A1區公共浴廁、專屬車位。",
+    "a1_car_pallet_remark": "電源插座乙座、專屬餐桌、使用A1或A區公共浴廁、專屬車位。",
     "b_tent": "B區空中帳篷",
     "b_tent_type": "已搭有營帳，睡墊 (210cm*240cm)。架高50cm(B)或80cm(BA)。",
-    "b_tent_remark": "有電源插座、專屬餐桌、使用管理中心兩側公共浴廁、使用公共停車場、『寵物禁止入內』。",
+    "b_tent_remark": "有電源插座、共用餐桌、使用管理中心兩側公共浴廁、使用公共停車場、『寵物禁止入內』。",
     "c_tent": "C區離地空帳",
     "c_tent_type": "已搭有營帳、睡墊(240cm*240cm)。",
-    "c_tent_remark": "電源插座乙座、專屬餐桌、使用管理中心浴廁、專屬車位。",
+    "c_tent_remark": "電源插座乙座、專屬餐桌、使用C區浴廁、專屬車位。",
     "c_car_pallet": "C區汽車棧板營位",
     "c_car_pallet_type": "須自搭營帳、木棧板營位。(420cm*420cm)。",
-    "c-car_pallet_remark": "電源插座乙座、專屬餐桌、使用管理中心浴廁、專屬車位。",
+    "c-car_pallet_remark": "電源插座乙座、專屬餐桌、使用C區浴廁、專屬車位。",
     "d_car_pallet": "D1區汽車棧板營位",
     "d_car_pallet_type": "須自搭營帳，木棧板營位 。(300cm*320cm)。",
     "d-car_pallet_remark": "有電源插座、專屬餐桌、使用D區公共浴廁、專屬車位。",
     "e_car_pallet": "D、E區汽車棧板",
-    "e_car_pallet_type": "須自搭營帳，木棧板營位 (D1~D12為300cm*320cm，其餘為220cm*320cm)。",
+    "e_car_pallet_type": "須自搭營帳，木棧板營位 (300cm*300cm)。",
     "e-car_pallet_remark": "有電源插座、專屬餐桌、使用D區/E區公共浴廁、專屬車位。",
     "camp_cottage": "露營屋",
     "a1_cottage": "A1.區景觀屋",
@@ -213,8 +213,8 @@
     "kao_kuang_roadmap": "國光客運路線圖",
     "kao_kuang_fee": "國光客運票價表",
     "fengyuan_bus": "豐原客運(全程6小時)",
-    "fengyuan_wuling": "【6506】豐原~梨山 發車時間 09:10 梨山~武陵 發車時間 17:00",
-    "wuling_fengyuan": "【6508】武陵~梨山 發車時間 06:30 梨山~豐原 發車時間 08:00",
+    "fengyuan_wuling": "【865】谷關~梨山 發車時間 06:45,11:45,16:15 梨山~武陵 發車時間 09:30,13:20",
+    "wuling_fengyuan": "【866】武陵~梨山 發車時間 11:00,14:20 梨山~谷關 發車時間 06:10,11:10,15:40",
     "fengyuan_website": "台中豐原客運網站",
     "advice": "中南部的朋友建議從台北出發，發車班次較多。",
     "notice": "注意事項",
